실서버 오픈 버전. 완료료

--- a/html/pick_view.html
+++ b/html/pick_view.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
     <link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
     <link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="../css/scss/superStock_us.css?v=5d2" />
+    <link rel="stylesheet" type="text/css" href="../css/scss/superStock_us.css?v=52d22" />
     <!-- <link rel="canonical" href="현재주소"> canonical 는 스크립트 canonicalURL로 생성 -->
     <!-- js -->
     <!-- <script type="text/javascript" src="/js/add_design.js"></script> -->
@@ -120,23 +120,26 @@
                             </li>
                             <li class="detail">
                                 <div class="title">
-                                    <a href="pick_view.html" class="name">마이크로소프트</a>
-                                    <span class="ticker">HSBC</span>
+                                    <a href="/us/view/ATAT" class="name">에이투어 라이프스타일 홀딩스</a>
+                                    <span class="ticker">ATAT</span>
                                 </div>
+
                                 <div class="num_per">
                                     <div class="num">
-                                        <span><b>898.</b>00</span>
+                                        <span><b>29</b>.11</span>
                                     </div>
                                     <div class="per">
-                                        <span class="increase"><i class="up"><svg xmlns="http://www.w3.org/2000/svg"
-                                                    width="9" height="10" viewBox="0 0 9 10" fill="none">
+                                        <span class="increase">
+                                            <i class="up">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="9" height="10"
+                                                    viewBox="0 0 9 10" fill="none">
                                                     <path
                                                         d="M5.3 2.56667C4.9 2.03333 4.1 2.03333 3.7 2.56667L1.2 5.9C0.705573 6.55924 1.17595 7.5 2 7.5L7 7.5C7.82405 7.5 8.29443 6.55924 7.8 5.9L5.3 2.56667Z"
-                                                        fill="#FF0000" />
-                                                </svg></i>
-                                            <b>89.</b>89%
+                                                        fill="#FF0000"></path>
+                                                </svg>
+                                            </i>
+                                            <b>1</b>.89%
                                         </span>
-                                        <!-- increase 증가, decrease 감소, 보합은 same -->
                                     </div>
                                 </div>
                                 <!-- //num_per  -->
@@ -158,25 +161,81 @@
                     <div class="document_box">
                         <h3 class="c_title">투자포인트</h3>
 
+
                         <div class="dataBox">
                             <div class="bg_box">
                                 <div class="data_opinion">
                                     <div class="line">
                                         <div class="th">편입가</div>
                                         <div class="td">
-                                            <b>216.98~220.01</b>
+                                            <b>88 ~ 88</b>
                                         </div>
                                     </div>
                                     <div class="line">
                                         <div class="th">손절가</div>
                                         <div class="td">
-                                            <b>331.50</b>
+                                            <b>3,338</b>
                                         </div>
                                     </div>
                                     <div class="line">
                                         <div class="th">목표가 <i><img src="../img/us/graph-up.svg" alt=""></i></div>
                                         <div class="td">
-                                            <b>331.50</b>
+                                            <b class="increase">338</b>
+                                            <!-- increase 증가, decrease 감소, 보합은 same -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- //bg_box -->
+                        </div>
+
+                        <div class="dataBox">
+                            <div class="bg_box">
+                                <div class="data_opinion">
+                                    <div class="line">
+                                        <div class="th">편입가</div>
+                                        <div class="td">
+                                            <b>8,888.00 ~ 8,888.00</b>
+                                        </div>
+                                    </div>
+                                    <div class="line">
+                                        <div class="th">손절가</div>
+                                        <div class="td">
+                                            <b>8,888.00</b>
+                                        </div>
+                                    </div>
+                                    <div class="line">
+                                        <div class="th">목표가 <i><img src="../img/us/graph-up.svg" alt=""></i></div>
+                                        <div class="td">
+                                            <b class="increase">8,888.00</b>
+                                            <!-- increase 증가, decrease 감소, 보합은 same -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- //bg_box -->
+                        </div>
+
+                        <div class="dataBox">
+                            <div class="bg_box">
+                                <div class="data_opinion">
+                                    <div class="line">
+                                        <div class="th">편입가</div>
+                                        <div class="td">
+                                            <b>888.00 ~ 888.00</b>
+                                        </div>
+                                    </div>
+                                    <div class="line">
+                                        <div class="th">손절가</div>
+                                        <div class="td">
+                                            <b>8,888.00</b>
+                                        </div>
+                                    </div>
+                                    <div class="line">
+                                        <div class="th">목표가 <i><img src="../img/us/graph-up.svg" alt=""></i></div>
+                                        <div class="td">
+                                            <b class="increase">888.00</b>
+                                            <!-- increase 증가, decrease 감소, 보합은 same -->
                                         </div>
                                     </div>
                                 </div>
@@ -196,9 +255,8 @@
                                 </span>AI 종목 진단 점수 99점으로 상위 99.9%에 속함 동일업종 내 상위 99.9%
                             </li>
                             <ul class="list">
-                                <li class="txt_ai">특허받은 AI투자 알고리즘에 매일 우량주를 발굴합니다. 특허받은 AI투자 알고리즘에 매일 우량주를 발굴합니다. </li>
-                                <li class="txt_ai">특허받은 AI투자 알고리즘에 매일 우량주를 발굴합니다. 특허받은 AI투자 알고리즘에 매일 우량주를 발굴합니다. </li>
-                                <li class="txt_ai">특허받은 AI투자 알고리즘에 매일 우량주를 발굴합니다. 특허받은 AI투자 알고리즘에 매일 우량주를 발굴합니다. </li>
+                                <li class="txt_ai">2025년 예상 매출액 47,947 백만달러(전년비 ▲2%), 주당순이익 2.87 달러(▲17%)</li>
+                                <li class="txt_ai">2026년 예상 매출액 50,335 백만달러(전년비 ▲5%), 주당순이익 3.13 달러(▲9%)</li>
                             </ul>
                             <li class="txt_ai">
                                 <span>
@@ -208,7 +266,7 @@
                                             d="M7 2C5.67392 2 4.40215 2.52678 3.46447 3.46447C2.52678 4.40215 2 5.67392 2 7V17C2 18.3261 2.52678 19.5979 3.46447 20.5355C4.40215 21.4732 5.67392 22 7 22H17C18.3261 22 19.5979 21.4732 20.5355 20.5355C21.4732 19.5979 22 18.3261 22 17V7C22 5.67392 21.4732 4.40215 20.5355 3.46447C19.5979 2.52678 18.3261 2 17 2H7ZM15.73 10.684C15.8198 10.5881 15.8899 10.4755 15.9362 10.3526C15.9825 10.2296 16.0041 10.0988 15.9998 9.96747C15.9956 9.83617 15.9655 9.707 15.9113 9.58732C15.8571 9.46765 15.7799 9.35982 15.684 9.27C15.5881 9.18018 15.4755 9.11011 15.3526 9.06381C15.2296 9.01751 15.0988 8.99588 14.9675 9.00015C14.8362 9.00442 14.707 9.03451 14.5873 9.08871C14.4677 9.1429 14.3598 9.22014 14.27 9.316L11.187 12.606L9.664 11.253C9.46446 11.0871 9.20825 11.0053 8.9495 11.0248C8.69075 11.0443 8.44972 11.1637 8.27732 11.3576C8.10493 11.5516 8.01467 11.8049 8.02562 12.0642C8.03657 12.3234 8.14787 12.5683 8.336 12.747L10.586 14.747C10.7807 14.9199 11.0352 15.0101 11.2953 14.9983C11.5554 14.9866 11.8007 14.8738 11.979 14.684L15.73 10.684Z"
                                             fill="#4168F6" />
                                     </svg>
-                                </span>AI 종목 진단 점수 99점으로 상위 99.9%에 속함 동일업종 내 상위 99.9%
+                                </span> 최근 7일간 주가 +32.32%, 3개월 추세 ‘횡보
                             </li>
                             <li class="txt_ai">
                                 <span>
@@ -222,9 +280,7 @@
                             </li>
                         </ul>
                         <!-- //ai_pointList -->
-
                     </div>
-
                 </div>
 
                 <!-- 매출액, 영업이익, 주당순이익(EPS) 막대 차트 -->
@@ -277,22 +333,6 @@
                         <h3 class="c_title">ROE 자기자본이익률</h3>
                         <span class="unit">* 단위 : 백만 달러</span>
                         <div id="containerfinancials1_3" class="financials_style"></div>
-                    </div>
-                    <div class="chart_box">
-                        <h3 class="c_title">주가&EPS</h3>
-                        <span class="signal_guide"><img src="../img/us/txt_guide_w.svg" alt="가이드보기"></span>
-                        <span class="unit">* 단위 : 달러</span>
-                        <div id="containerfinancials2_1" class="financialsLine_style"></div>
-                    </div>
-                    <div class="chart_box">
-                        <h3 class="c_title">주당배당금</h3>
-                        <span class="unit">* 단위 : 달러</span>
-                        <div id="containerfinancials1_4" class="financials_style"></div>
-                    </div>
-                    <div class="chart_box">
-                        <h3 class="c_title">시가배당률</h3>
-                        <span class="unit">* 단위 : %</span>
-                        <div id="containerfinancials1_5" class="financials_style"></div>
                     </div>
                 </div>
             </div>
