--- a/html/search_view.html
+++ b/html/search_view.html
@@ -121,7 +121,7 @@
                 <div class="recom_company">
                     <ul class="list">
                         <li class="ticker">AAPL</li>
-                        <li class="company_nm">마이크로소프트마이크로소프트</li>                        
+                        <li class="company_nm">마이크로소프트마이크로소프트마이크로소프트마이크로소프트</li>                        
                         
                         <!-- 정규장 -->
                         <li class="detail">
@@ -129,7 +129,7 @@
                                 <span><b>898.</b>00</span>
                             </div>
                             <div class="per">
-                                <span class="increase"><b>+89.</b>89</span>
+                                <span class="increase"><b>+67.</b>00</span>
                                 <span class="increase">(<b>+89.</b>89%)</span>
                                 <!-- increase 증가, decrease 감소, 보합은 same -->
                                 <span class="day">1/23, 장마감</span>
