--- a/html/sstock_us.html
+++ b/html/sstock_us.html
@@ -201,13 +201,13 @@
                                             <span><b>898.</b>00</span>
                                         </div>
                                         <div class="per">
-                                            <span class="increase"><i class="up"><svg xmlns="http://www.w3.org/2000/svg"
-                                                        width="9" height="10" viewBox="0 0 9 10" fill="none">
-                                                        <path
-                                                            d="M5.3 2.56667C4.9 2.03333 4.1 2.03333 3.7 2.56667L1.2 5.9C0.705573 6.55924 1.17595 7.5 2 7.5L7 7.5C7.82405 7.5 8.29443 6.55924 7.8 5.9L5.3 2.56667Z"
-                                                            fill="#FF0000" />
-                                                    </svg></i><b>34.</b>89</span>
-                                            <span class="increase">(<b>89.</b>89%)</span>
+                                            <span class="same"><i class="same">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="9" height="10"
+                                                        viewBox="0 0 9 10" fill="none">
+                                                        <rect y="4" width="9" height="2" rx="1" fill="#6B7684" />
+                                                    </svg></i>
+                                                <b>0.</b>00</span>
+                                            <span class="same">(<b>0.</b>00%)</span>
                                             <!-- increase 증가, decrease 감소, 보합은 same -->
                                         </div>
                                     </div>
@@ -307,6 +307,7 @@
                         <!-- //swiper-wrapper -->
                     </div>
                     <!-- //swiper-container -->
+                    <span class="day">*기준 25. 03/28 장종료</span>
                 </div>
                 <!-- //leading_area -->
                 <!-- //주요지수 스크롤 노출 -->
@@ -317,7 +318,7 @@
             <div class="mainBox stockwrapper">
                 <div class="tabsArea">
                     <ul class="tabs">
-                        <li rel="tab1" class="active"><span>슈퍼Pick</span></li>
+                        <li rel="tab1"><span>슈퍼Pick</span></li>
                         <li rel="tab2"><span>탐구생활</span></li>
                     </ul>
 
@@ -408,7 +409,7 @@
                                         </li>
                                         <li class="data">
                                             추천상승률
-                                            <span class="num decrease"><b>-898.</b>00%</span>
+                                            <span class="num same"><b>0.</b>00%</span>
                                         </li>
                                     </div>
                                 </ul>
@@ -491,92 +492,92 @@
                                         </li>
                                     </div>
                                 </ul>
-
-                                <div class="btn_more">
-                                    <!-- 더보기 버튼 열린 경우 active 클래스로 화살표 방향 변경 -->
-                                    <button class="active">더보기 <i><svg xmlns="http://www.w3.org/2000/svg" width="24"
-                                                height="24" viewBox="0 0 24 24" fill="none">
-                                                <path d="M17 14L12 9L7 14" stroke="#4E5866" stroke-width="1.5"
-                                                    stroke-linecap="round" stroke-linejoin="round" />
-                                            </svg></i></button>
-                                </div>
-
                             </div>
                             <!-- //pick_list -->
-
+                            <div class="btn_more">
+                                <!-- 더보기 버튼 열린 경우 active 클래스로 화살표 방향 변경 -->
+                                <button class="">더보기 <i><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none">
+                                            <path d="M17 14L12 9L7 14" stroke="#4E5866" stroke-width="1.5"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></i></button>
+                            </div>
                         </div>
+
                         <!-- 탐구생활 탭 내용 -->
                         <div id="tab2" class="tab_content">
-                            <div class="exploration_list">
-                                <ul class="list" onclick="location.href ='quest_view.html'" style="cursor:pointer;">
-                                    <li class="note_nm">
-                                        <a href="quest_view.html">
-                                            애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플
-                                        </a>
-                                    </li>
-                                    <!-- 이미지 없는 경우 아래 li 제거 -->
-                                    <li class="sume_img">
-                                        <a href="quest_view.html"><img src="https://picsum.photos/56" alt="노트 썸네일"
-                                                class="img" style="width: 56px; height: 56px;"></a>
-                                    </li>
-                                </ul>
-                                <ul onclick="location.href ='quest_view.html'" style="cursor:pointer;">
-                                    <li class="note_nm">
-                                        <a href="quest_view.html"> 애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플애플, 위성통신
-                                            접속기능 탑재한 아이폰14 시리즈 공개애플
-                                        </a>
-                                    </li>
-                                </ul>
-                                <ul class="list" onclick="location.href ='quest_view.html'" style="cursor:pointer;">
-                                    <li class="note_nm">
-                                        <a href="quest_view.html">
-                                            애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플
-                                        </a>
-                                    </li>
-                                    <!-- 이미지 없는 경우 아래 li 제거 -->
-                                    <li class="sume_img">
-                                        <a href="quest_view.html"><img src="https://picsum.photos/56" alt="노트 썸네일"
-                                                class="img" style="width: 56px; height: 56px;"></a>
-                                    </li>
-                                </ul>
-                                <ul onclick="location.href ='quest_view.html'" style="cursor:pointer;">
-                                    <li class="note_nm">
-                                        <a href="quest_view.html"> 애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플애플, 위성통신
-                                            접속기능 탑재한 아이폰14 시리즈 공개애플
-                                        </a>
-                                    </li>
-                                </ul>
-                                <ul class="list" onclick="location.href ='quest_view.html'" style="cursor:pointer;">
-                                    <li class="note_nm">
-                                        <a href="quest_view.html">
-                                            애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플
-                                        </a>
-                                    </li>
-                                    <!-- 이미지 없는 경우 아래 li 제거 -->
-                                    <li class="sume_img">
-                                        <a href="quest_view.html"><img src="https://picsum.photos/56" alt="노트 썸네일"
-                                                class="img" style="width: 56px; height: 56px;"></a>
-                                    </li>
-                                </ul>
-                                <ul onclick="location.href ='quest_view.html'" style="cursor:pointer;">
-                                    <li class="note_nm">
-                                        <a href="quest_view.html"> 애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플애플, 위성통신
-                                            접속기능 탑재한 아이폰14 시리즈 공개애플
-                                        </a>
-                                    </li>
-                                </ul>
-
+                            <div class="bg_box">
+                                <div class="exploration_list">
+                                    <ul class="list" onclick="location.href ='quest_view.html'" style="cursor:pointer;">
+                                        <li class="note_nm">
+                                            <a href="quest_view.html">
+                                                애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플
+                                            </a>
+                                        </li>
+                                        <!-- 이미지 없는 경우 아래 li 제거 -->
+                                        <li class="sume_img">
+                                            <a href="quest_view.html"><img src="https://picsum.photos/56" alt="노트 썸네일"
+                                                    class="img" style="width: 56px; height: 56px;"></a>
+                                        </li>
+                                    </ul>
+                                    <ul onclick="location.href ='quest_view.html'" style="cursor:pointer;">
+                                        <li class="note_nm">
+                                            <a href="quest_view.html"> 애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플애플, 위성통신
+                                                접속기능 탑재한 아이폰14 시리즈 공개애플
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <ul class="list" onclick="location.href ='quest_view.html'" style="cursor:pointer;">
+                                        <li class="note_nm">
+                                            <a href="quest_view.html">
+                                                애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플
+                                            </a>
+                                        </li>
+                                        <!-- 이미지 없는 경우 아래 li 제거 -->
+                                        <li class="sume_img">
+                                            <a href="quest_view.html"><img src="https://picsum.photos/56" alt="노트 썸네일"
+                                                    class="img" style="width: 56px; height: 56px;"></a>
+                                        </li>
+                                    </ul>
+                                    <ul onclick="location.href ='quest_view.html'" style="cursor:pointer;">
+                                        <li class="note_nm">
+                                            <a href="quest_view.html"> 애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플애플, 위성통신
+                                                접속기능 탑재한 아이폰14 시리즈 공개애플
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <ul class="list" onclick="location.href ='quest_view.html'" style="cursor:pointer;">
+                                        <li class="note_nm">
+                                            <a href="quest_view.html">
+                                                애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플
+                                            </a>
+                                        </li>
+                                        <!-- 이미지 없는 경우 아래 li 제거 -->
+                                        <li class="sume_img">
+                                            <a href="quest_view.html"><img src="https://picsum.photos/56" alt="노트 썸네일"
+                                                    class="img" style="width: 56px; height: 56px;"></a>
+                                        </li>
+                                    </ul>
+                                    <ul onclick="location.href ='quest_view.html'" style="cursor:pointer;">
+                                        <li class="note_nm">
+                                            <a href="quest_view.html"> 애플, 위성통신 접속 기능 탑재한 아이폰14 시리즈 공개애플애플, 위성통신
+                                                접속기능 탑재한 아이폰14 시리즈 공개애플
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <!-- //exploration_list -->
                                 <div class="btn_more">
                                     <!-- 더보기 버튼 열린 경우 active 클래스로 화살표 방향 변경 -->
-                                    <button class="active">더보기 <i><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                                    <button class="">더보기 <i><svg xmlns="http://www.w3.org/2000/svg" width="24"
                                                 height="24" viewBox="0 0 24 24" fill="none">
                                                 <path d="M17 14L12 9L7 14" stroke="#4E5866" stroke-width="1.5"
                                                     stroke-linecap="round" stroke-linejoin="round" />
                                             </svg></i></button>
                                 </div>
-                            </div>
-                            <!-- //exploration_list -->
 
+                            </div>
+                            <!-- //bg_box -->
                         </div>
                     </div>
                     <!-- //tab_container -->
