슈퍼픽 편입일 추가

--- a/html/sstock_us.html
+++ b/html/sstock_us.html
@@ -352,6 +352,9 @@
                                                 <span class="increase">+23.86%</span>
                                                 <!-- increase 증가, decrease 감소, 보합은 same -->
                                             </div>
+                                            <div class="day">
+                                                <span>04/10 (목)</span>
+                                            </div>
                                         </li>
                                     </div>
                                     <div>
